src/objects/Email_Responses_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email Responses Snapshot</label>
    <nameField>
        <label>Email Responses Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Responses Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>